--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
     url: "/about/"
   - title: "Publications"
     url: "/publications/"
-  - title: "Projects"
-    url: "/projects/"
+  # - title: "Projects"
+  #   url: "/projects/"
   - title: "Join Us"
     url: "/joinus/"
   # - title: "Quick-Start Guide"
