--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,6 +1,6 @@
 aalto:
   - name: "Nam Hee Gordon Kim"
-    role: "PhD Student, Principal Investigator"
+    role: "PhD Student, Group Leader"
     affiliation: "Aalto University"
     headshot: "/assets/imgs/namhee_headshot.jpg"
     website: "https://namheegordonkim.github.io"
@@ -8,49 +8,57 @@ aalto:
     role: "MSc Thesis Student"
     affiliation: "Aalto University"
     headshot: "/assets/imgs/nami_headshot.png"
-    website: "asdf"
+    website: "/"
   - name: "Niko Nästi"
     role: "MSc Thesis Student"
     affiliation: "Aalto University"
     headshot: "/assets/imgs/niko_headshot.jpg"
-    website: "asdf"
+    website: "/"
   - name: "Perttu Hämäläinen"
     role: "Associate Professor"
     affiliation: "Aalto University"
     headshot: "/assets/imgs/perttu_headshot.png"
+    website: "https://users.aalto.fi/~hamalap5/"
   - name: "Nadia Ady"
     role: "Postdoctoral Researcher"
     affiliation: "Aalto University"
     headshot: "/assets/imgs/nadia_headshot.png"
-    website: "asdf"
+    website: "https://research.aalto.fi/en/persons/nadia-ady"
+  - name: "Erik Lintunen"
+    role: "PhD Student"
+    affiliation: "Aalto University"
+    headshot: ""
+    website: "/"
+
 dfki:
   - name: "Noshaba Cheema"
     role: "PhD Student"
-    affiliation: "DFKI / MPI-Inf"
+    affiliation: "DFKI / Max Planck Institute for Informatics"
     headshot: "/assets/imgs/noshaba_headshot.jpeg"
-    website: "asdf"
+    website: "https://people.mpi-inf.mpg.de/~ncheema/"
   - name: "Rui Xu"
     role: "PhD Student"
     affiliation: "DFKI"
     headshot: ""
-    website: ""
+    website: "/"
 alumni:
   - name: "Elias Mikkola"
     role: "MSc Thesis Student"
     affiliation: "Singa Entertainment"
     headshot: "/assets/imgs/elias_headshot.png"
-    website: "asdf"
+    website: "https://www.linkedin.com/in/eliasmikkola1/"
   - name: "Nicholas Saarela"
     role: "Research Associate"
     affiliation: "Remedy Entertainment"
     headshot: "/assets/imgs/nicholas_headshot.jpg"
-    website: "asdf"
+    website: "https://www.linkedin.com/in/nicholassaarela/"
   - name: "Jinglin Yang"
     role: "MSc Seminar Student"
     affiliation: "Aalto University"
     headshot: ""
+    website: "/"
   - name: "Kristian Hartikainen"
     role: "Visiting PhD Student"
-    affiliation: "Tuomas Startup"
+    affiliation: "Startup"
     headshot: "/assets/imgs/kristian_headshot.jpeg"
-    website: "asdf"
+    website: "https://hartikainen.github.io/"
