--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -3,22 +3,23 @@ years:
     papers:
       - title: "Learning High-Risk High-Precision Motion Control"
         authors: "Nam Hee Kim, Markus Kirjonen, Perttu Hämäläinen"
-        website: ""
+        website: "https://namheegordonkim.github.io/scoot-mig2022/"
         venue: "MIG 2022"
+        thumbnail: "/assets/imgs/scoot_thumb.png"
       - title: "Understanding the evolution of linear regions in deep reinforcement learning"
         authors: "Setareh Cohan, Nam Hee Kim, David Rolnick, Michiel van de Panne"
-        website: ""
+        website: "https://www.cs.ubc.ca/~van/papers/2022-NeurIPS-understanding/index.html"
         venue: "NeurIPS 2022"
+        thumbnail: "/assets/imgs/linear_regions_thumb.gif"
   - year: "2023"
     papers:
       - title: "Discovering Fatigued Movements for Virtual Character Animation"
         authors: "Noshaba Cheema, Rui Xu, Nam Hee Kim, Perttu Hämäläinen, Vladislav Golyanik, Marc Habermann, Christian Theobalt, Philipp Slusallek"
-        website: ""
+        website: "https://vcai.mpi-inf.mpg.de/projects/FatiguedMovements/"
         venue: "SIGGRAPH Asia 2023"
-        image: "asdf"
-theses:
-  year2023:
-    - title: "Online Planning and Control of Physics-Based Skateboarding Animation"
-      authors: "Elias Mikkola"
-      website: ""
-      image: "asdf"
+        thumbnail: "/assets/imgs/fatigue_teaser.gif"
+    theses:
+      - title: "Online Planning and Control of Physics-Based Skateboarding Animation"
+        authors: "Elias Mikkola"
+        website: "/projects/skateboard"
+        thumbnail: "/assets/imgs/elias_thesis_thumb.png"
