--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ github_username: teamaram
 theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
+  - github-pages
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
