--- a/_data/people.yml
+++ b/_data/people.yml
@@ -59,6 +59,6 @@ alumni:
     website: "/"
   - name: "Kristian Hartikainen"
     role: "Visiting PhD Student"
-    affiliation: "Startup"
+    affiliation: "Eka Robotics"
     headshot: "/assets/imgs/kristian_headshot.jpeg"
     website: "https://hartikainen.github.io/"
